crates/forge_api/src/snapshots/forge_api__loader__tests__load_workflow_with_missing_prompt_file.snap
---
source: crates/forge_api/src/loader.rs
expression: "serde_json::to_string_pretty(&workflow)?"
snapshot_kind: text
---
{
  "agents": [
    {
      "id": "developer",
      "model": "anthropic/claude-3.5-sonnet",
      "description": null,
      "system_prompt": {
        "template": "nested/system_prompt.md"
      },
      "user_prompt": {
        "template": "<task>{{event.value}}</task>"
      },
      "tools": [
        "tool_forge_fs_read",
        "tool_forge_fs_create"
      ],
      "subscribe": [
        "user_task"
      ],
      "max_turns": 1024
    }
  ]
}
